# Cafeteria-Web_App

./: .env  .env.example  .gitignore  Cafeteria_Web_App.pptx  README.md  pyproject.toml  requirements.txt  run_fastapi.py
app/: __init__.py  fastapi_api.py  fastapi_app.py  flask_api.py
app/core/: models.py
app/storage/: memory_repo.py  mongo_repo.py
app/templates/: items.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: AdminPage.jsx  CustomerPage.jsx
tests/: test_items_api.py  test_items_api_fastapi.py
