[tool.poetry]
name = "cafeteria-web-app"
version = "0.1.0"
description = ""
authors = ["AhnafMasud1234 <ahnafmasud31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.9"
uvicorn = "^0.38.0"
pymongo = "^4.15.5"
jinja2 = "^3.1.6"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
